Fixed hero spacing on Mobile.

--- a/css/index.css
+++ b/css/index.css
@@ -1846,7 +1846,7 @@ footer {
         height: 450px;
         max-height: 450px;
         padding: 0;
-        padding-bottom: 20px;
+        padding-bottom: 60px;
         margin-top: 0;
     }
     dotlottie-player {
